# Waypoint_Manager

./: README.md
ROS-Assignment/src/butlerbot_description/: CMakeLists.txt
ROS-Assignment/src/butlerbot_description/config/: display.perspective  display.rviz
ROS-Assignment/src/butlerbot_description/launch/: display.launch.py  rsp.launch.py  visualize.launch.py
ROS-Assignment/src/butlerbot_description/urdf/: butlerbot.xacro  butlerbot_kobuki_gazebo.xacro  butlerbot_mod.xacro  butlerbot_properties.xacro  common_properties.xacro
ROS-Assignment/src/butlerbot_gazebo/: CMakeLists.txt
ROS-Assignment/src/butlerbot_gazebo/launch/: spawn_robot.launch.py
ROS-Assignment/src/butlerbot_gazebo/rviz/: display.rviz
ROS-Assignment/src/butlerbot_gazebo/worlds/: coffeshop.world
ROS-Assignment/src/butlerbot_localization/: CMakeLists.txt
ROS-Assignment/src/butlerbot_localization/config/: localization.yaml  mapper_params_online_async_localization.yaml
ROS-Assignment/src/butlerbot_localization/launch/: localization.launch.py
ROS-Assignment/src/butlerbot_localization/maps/: cafe_rmf.pgm  map1.pgm
ROS-Assignment/src/butlerbot_navigation/: CMakeLists.txt  package.xml
ROS-Assignment/src/butlerbot_rmf_gazebo/: CMakeLists.txt
ROS-Assignment/src/butlerbot_rmf_gazebo/launch/: cafe.launch.py
ROS-Assignment/src/butlerbot_rmf_gazebo/maps/: cafe.building.yaml
ROS-Assignment/src/ros2_ws/: waypoints.yaml
ROS-Assignment/src/ros2_ws/install/: local_setup.sh  setup.sh
ROS-Assignment/src/ros2_ws/log/: latest_build
ROS-Assignment/src/ros2_ws/src/cpp_node/: CMakeLists.txt
ROS-Assignment/src/ros2_ws/src/cpp_node/include/cpp_node/: waypoint.hpp
ROS-Assignment/src/ros2_ws/src/cpp_node/src/: waypoint.cpp
install/: local_setup.sh  setup.sh
install/butlerbot_description/share/butlerbot_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/butlerbot_gazebo/share/butlerbot_gazebo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/butlerbot_localization/share/butlerbot_localization/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
(+54 files in other folders)
